--- a/tsconfig.angular.json
+++ b/tsconfig.angular.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "declaration": true,
     "strict": true,
-    "outDir": "./dist/angular",
+    "outDir": "./lib/angular",
     "baseUrl": "./src"
   },
   "include": [
