--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
   },
   "homepage": "https://github.com/Moventes/modelata-types-fire#readme",
   "devDependencies": {
-    "@google-cloud/firestore": "^2.6.0",
+    "@google-cloud/firestore": "^5.0.2",
     "cp-cli": "^2.0.0",
-    "rimraf": "^3.0.0",
-    "rxjs": "~6.4.0",
-    "tslint": "5.20.1",
+    "firebase": "^9.6.3",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.5.2",
+    "tslint": "^6.1.2",
     "tslint-config-airbnb": "5.11.2",
-    "typescript": "^3.7.2",
-    "firebase": "^7.4.0"
+    "typescript": "^4.5.4"
   },
   "peerDependencies": {
-    "@google-cloud/firestore": "^2.6.0",
-    "rxjs": "~6.4.0",
-    "firebase": "^7.4.0"
+    "@google-cloud/firestore": "^5.0.2",
+    "firebase": "^9.6.3",
+    "rxjs": "^7.5.2"
   }
 }
