:package: Use eslint

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prebuild:node": "cp-cli ./config/node.exports.ts ./src/specifics/exports.ts",
     "build:node": "tsc -p tsconfig.node.json",
     "prepublish": "npm run build",
-    "lint": "tslint -p tsconfig.angular.json -c tslint.json 'src/**/*.ts'"
+    "lint": "npx eslint src/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -34,12 +34,13 @@
   "homepage": "https://github.com/Moventes/modelata-types-fire#readme",
   "devDependencies": {
     "@google-cloud/firestore": "^4.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "cp-cli": "^2.0.0",
+    "eslint": "^8.7.0",
     "firebase": "^9.6.3",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.2",
-    "tslint": "^6.1.2",
-    "tslint-config-airbnb": "5.11.2",
     "typescript": "^4.5.4"
   },
   "peerDependencies": {
