:memo: Update links

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/Moventes/modelata-types-fire.git"
+    "url": "git+ssh://git@github.com/Modelata/types-fire.git"
   },
   "keywords": [
     "modelata",
@@ -29,9 +29,9 @@
   "author": "Moventes",
   "license": "Beerware",
   "bugs": {
-    "url": "https://github.com/Moventes/modelata-types-fire/issues"
+    "url": "https://github.com/Modelata/types-fire/issues"
   },
-  "homepage": "https://github.com/Moventes/modelata-types-fire#readme",
+  "homepage": "https://github.com/Modelata/types-fire#readme",
   "devDependencies": {
     "@google-cloud/firestore": "^4.5.0",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
