--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@modelata/types-fire",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "Interfaces for modelata fire",
   "main": "lib/angular/index.js",
   "types": "lib/angular/index.d.ts",
@@ -38,14 +38,14 @@
     "@typescript-eslint/parser": "^5.10.0",
     "cp-cli": "^2.0.0",
     "eslint": "^8.7.0",
-    "firebase": "^9.6.3",
+    "firebase": "~9.6.3",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.2",
     "typescript": "^4.5.4"
   },
   "peerDependencies": {
     "@google-cloud/firestore": "^4.5.0",
-    "firebase": "^9.6.3",
+    "firebase": "~9.6.3",
     "rxjs": "^7.5.2"
   }
 }
